@@ -4,8 +4,7 @@ import org.json.JSONArray;
 import org.json.JSONObject;
 
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
+import java.io.InputStream;
 
 /**Parses JSON files into usable objects.
  * */
@@ -15,9 +14,9 @@ public class JsonParser {
   /**Constructor.
    * Takes in a path to a file and creates a new JSON object if possible.
    *
-   * @param path The path to the JSON file. */
-  public JsonParser(Path path) throws IOException {
-    String content = new String(Files.readAllBytes(path.toAbsolutePath()));
+   * @param is The path to the JSON file. */
+  public JsonParser(InputStream is) throws IOException {
+    String content = new String(is.readAllBytes());
     jsonObject = new JSONObject(content);
   }
 
